# SDiZO2---Prim-Dijkstra

./: CMakeLists.txt  main.cpp  textFile.txt
Classes/: DataGenerator.cpp  DataGenerator.h  Dijkstra_array.cpp  Dijkstra_array.h  Djikstra_list_STL.cpp  Djikstra_list_STL.h  Menu.cpp  Menu.h  Prim.cpp  Prim.h  PrimListSTL.cpp  PrimListSTL.h
